--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     
 </div>
 
-<!-- 7:17 -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script> -->
+<script src="index.js"></script>
 </body>
 </html>
