--- a/index.html
+++ b/index.html
@@ -12,24 +12,7 @@
     
 <div id="app" class="container-fluid">
     <div id="panel" class="bg-light sidebar"></div>
-    <div id="site" class="content">
-        <div class="row">
-            <div class="col-sm">
-                <h1>hello world</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, sit!</p>
-            </div>
-            <div class="col-sm">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, sit!</p>
-            </div>
-            <div class="col-sm">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, sit!</p>
-            </div>
-        </div>
-    </div>
+    <div id="site" class="content"></div>
     
 </div>
 
